feat: lab 05 in progress

--- a/notebooks/05_Non-linearities_and_regularisation.ipynb
+++ b/notebooks/05_Non-linearities_and_regularisation.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "        Returns:\n",
     "            Value of penalty term.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError()\n",
+    "        return self.coefficient * np.sum(np.abs(parameter))\n",
     "        \n",
     "    def grad(self, parameter):\n",
     "        \"\"\"Calculate the penalty gradient with respect to the parameter.\n",
@@ -129,7 +129,7 @@
     "            Value of penalty gradient with respect to parameter. This\n",
     "            should be an array of the same shape as the parameter.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError()\n",
+    "        return self.coefficient * np.sign(parameter)\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return 'L1Penalty({0})'.format(self.coefficient)\n",
@@ -160,7 +160,7 @@
     "        Returns:\n",
     "            Value of penalty term.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError()\n",
+    "        return self.coefficient * 0.5 * np.sum(parameter**2)\n",
     "        \n",
     "    def grad(self, parameter):\n",
     "        \"\"\"Calculate the penalty gradient with respect to the parameter.\n",
@@ -172,7 +172,7 @@
     "            Value of penalty gradient with respect to parameter. This\n",
     "            should be an array of the same shape as the parameter.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError()\n",
+    "        return self.coefficient * parameter\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return 'L2Penalty({0})'.format(self.coefficient)"
@@ -187,9 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All test values calculated correctly for L1Penalty\n"
+     ]
+    }
+   ],
    "source": [
     "test_params_1 = np.array([[0.5, 0.3, -1.2, 5.8], [0.2, -3.1, 4.9, -5.0]])\n",
     "test_params_2 = np.array([0.8, -0.6, -0.3, 1.5, 2.8])\n",
@@ -210,9 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All test values calculated correctly for L2Penalty\n"
+     ]
+    }
+   ],
    "source": [
     "test_params_1 = np.array([[0.5, 0.3, -1.2, 5.8], [0.2, -3.1, 4.9, -5.0]])\n",
     "test_params_2 = np.array([0.8, -0.6, -0.3, 1.5, 2.8])\n",
